--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="East Perfumes - Authentic luxury fragrances from the East. Discover our curated collection of premium perfumes." />
-    <meta name="keywords" content="perfumes, luxury fragrances, east perfumes, arabic perfumes, oud, authentic" />
-    <meta property="og:title" content="East Perfumes | Luxury Fragrances" />
-    <meta property="og:description" content="Authentic luxury fragrances from the East." />
-    <meta property="og:type" content="website" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />
-    <title>East Perfumes | Luxury Fragrances</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html lang="ar" dir="rtl">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="East Perfumes — أرقى العطور الشرقية والغربية" />
+  <meta name="keywords" content="perfumes, عطور, east perfumes, oud, بخور, عود" />
+  <meta property="og:title" content="East Perfumes" />
+  <meta property="og:description" content="اكتشف مجموعتنا الفاخرة من العطور الشرقية والغربية" />
+  <meta property="og:type" content="website" />
+  <title>East Perfumes | عطور الشرق</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
