--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="East Perfumes — أرقى العطور الشرقية والغربية" />
-  <meta name="keywords" content="perfumes, عطور, east perfumes, oud, بخور, عود" />
-  <meta property="og:title" content="East Perfumes" />
+  <meta name="description" content="TIVAQ Fragrance — أرقى العطور الشرقية والغربية" />
+  <meta name="keywords" content="perfumes, عطور, TIVAQ Fragrance, oud, بخور, عود" />
+  <meta property="og:title" content="TIVAQ Fragrance" />
   <meta property="og:description" content="اكتشف مجموعتنا الفاخرة من العطور الشرقية والغربية" />
   <meta property="og:type" content="website" />
-  <title>East Perfumes | عطور الشرق</title>
+  <title>TIVAQ Fragrance</title>
 </head>
 
 <body>
